test servicio cuentas arreglado